# ifcount

./: Cargo.toml  README.md  gen_coverage.sh
.cargo/: config.toml
.github/workflows/: test.yml
crates/par-proc-macro2/: Cargo.toml  build.rs
crates/par-proc-macro2/src/: extra.rs  fallback.rs  lib.rs  marker.rs  rcvec.rs
crates/par-quote/: Cargo.toml
crates/par-syn/: Cargo.toml
crates/par-syn/src/: buffer.rs  expr.rs  lib.rs  path.rs
src/: main.rs
src/collector/: git.rs  mod.rs
src/collector/git/: mod.rs  octocrab_ext.rs
src/collector/metrics/: mod.rs
src/collector/metrics/impl/: avg_attrs.rs  avg_fn_arg_count.rs  avg_fn_depth.rs  basic_enums.rs  basic_files.rs  basic_structs.rs  basic_traits.rs  fn_arg_count.rs  fn_depth.rs  if_count.rs  lack_of_cohesion.rs  macros.rs  mod.rs  stmt_size.rs
src/collector/metrics/impl/complexity/: impl.rs  mod.rs
src/collector/metrics/impl/methods/: impl.rs  mod.rs  util.rs
src/collector/metrics/util/: histogram.rs  mod.rs  monoid.rs  test.rs  unaggregated.rs  visitor_collector.rs
src/collector/metrics/util/observer/: histogram.rs  mod.rs  unaggregated.rs
src/collector/rust_code_analysis/: mod.rs
