[package]
name = "ifcount"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/DCNick3/ifcount"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.29", features = ["full", "visit", "extra-traits"] }

clap = { version = "4.4.0", features = ["derive"] }

anyhow = { version = "1.0.75" }

ansi_term = "0.12.1"
indicatif = "0.17.6"
tracing-indicatif = "0.3.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

rayon = "1.7.0"

gix = "0.53.1"
octocrab = "0.30.1"
url = "2.4.1"
governor = "0.6.0"
async-trait = "0.1.73"
http = "0.2.9"
hyper = "0.14.27"
snafu = "0.7.5"
cacache = "11.7.1"
directories = "5.0.1"

tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }

relative-path = "1.9.0"
pathdiff = "0.2.1"

ignore = "0.4.20"

[workspace.metadata.release]
shared-version = true
publish = false
tag-prefix = ""

[profile.release]
debug = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.2.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
]
