[package]
name = "proc-macro2"
version = "1.0.68" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>", "Alex Crichton <alex@alexcrichton.com>"]
autobenches = false
categories = ["development-tools::procedural-macro-helpers"]
description = "A substitute implementation of the compiler's `proc_macro` API to decouple token-based libraries from the procedural macro use case."
documentation = "https://docs.rs/proc-macro2"
edition = "2021"
keywords = ["macros", "syn"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/proc-macro2"
rust-version = "1.56"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "procmacro2_semver_exempt"]
rustdoc-args = ["--cfg", "procmacro2_semver_exempt", "--cfg", "doc_cfg", "--generate-link-to-definition"]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.playground]
features = ["span-locations"]

[dependencies]
unicode-ident = "1.0"

[dev-dependencies]
quote = { version = "1.0", default_features = false }
rustversion = "1"

[features]
# Expose methods Span::start and Span::end which give the line/column location
# of a token.
span-locations = []

# This feature no longer means anything.
nightly = []

[lib]
doc-scrape-examples = false